Fixed "delete operator must be optional"
